naming and layout

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build-back && npm run build-front",
-    "start": "cd build-server && node bundle-back.js",
+    "start": "cd built-server && node bundle-back.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-all": "npm run build-front && npm run build-back",
     "build-back": "webpack --config webpack-back.config.js",
     "build-back-live": "webpack watch --config webpack-back.config.js",
-    "start-server": "nodemon --delay 2500 build-server/bundle-back.js",
+    "start-server": "nodemon built-server/bundle-back.js -delay 2.5",
     "build-front": "webpack --config webpack-front.config.js",
     "build-front-serve": "webpack serve --config webpack-front.config.js",
     "build-front-live": "webpack watch --config webpack-front.config.js",
